refactor(Output): randomizeRace 메서드 제거 및 메서드명 변경